--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,38 @@
     overflow: hidden;
 }
 
+/* Home */
+.container0 {
+  background-image: url(../img/kaxeti.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  padding: 30px;
+  
+}
+
+.h1 {
+  margin: 0 auto;
+  margin-bottom: 30px;
+  width: 35%;
+  color: #fff;
+  font-size: 25px;
+  
+}
+
+.h1text{
+/* font-family: 'Playfair Display', serif; */
+font-family: 'Cormorant Infant', serif;
+font-size: 80px;
+text-align: center;
+
+}
+
 /* 1st part */
 
 .container1 {
@@ -59,23 +91,6 @@
   
 }
 
-.section1 {
-overflow-y: scroll;
-scroll-behavior: smooth;
-scroll-snap-type: y mandatory;
-}
-
-.section2 {
-  overflow-y: scroll;
-  scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
-}
-
-.section3 {
-  overflow-y: scroll;
-  scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
-}
 .logokai {
   display: flex;
   margin: 0 auto;
@@ -85,22 +100,6 @@ scroll-snap-type: y mandatory;
 .kailogo {
   width: 270px;
   height: auto;
-}
-
-.h1 {
-    display: flex;
-    margin: 80px auto;
-    margin-bottom: 30px;
-    max-width: 500px;
-    width: 100%;
-    color: #fff;
-    font-size: 25px;
-    font-family: 'Explora', cursive;
-}
-
-.h1text{
-  font-family: 'Playfair Display', serif;
-  
 }
 
 .explora {
