--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,83 @@ z-index: 200;
 
 /* 1st part */
 
+/* .gallery {
+	padding: 1rem;
+	display: grid;
+	grid-template-columns: repeat(5, 80vw);
+	grid-template-rows: 1fr;
+	grid-column-gap: 1rem;
+	grid-row-gap: 1rem;
+	overflow-x: scroll;
+	height: 50vh;
+	scroll-snap-type: both mandatory;
+	scroll-padding: 1rem;
+}
+
+.active {
+	scroll-snap-type: unset;
+}
+
+li {
+	scroll-snap-align: center;
+	display: inline-block;
+	border-radius: 3px;
+	font-size: 0;
+  background-size: contain;
+  background-repeat: no-repeat;
+} */
+.container1 h1{
+  font-size: 50px;
+  margin-bottom: 100px;
+  font-family: 'Cormorant Infant', serif;
+  color: #800000;
+}
+
+
+.gallery{
+  width: 90%;
+  height: 600px;
+  margin: 0 auto;
+  display: flex;
+  overflow-x: auto;
+  flex-wrap: wrap;
+  flex-direction: column;
+  overflow-x: auto;
+  position: relative;
+  scroll-snap-type: both mandatory;
+}
+.gallery::-webkit-scrollbar {
+  display: none;
+}
+.gallery button{
+  position: absolute;
+  font-size: 20px;
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-radius: 50%;
+  top: 50%;
+  cursor: pointer;
+}
+.gallery #gallery-btn1{
+  left: 20px;
+}
+.gallery #gallery-btn2{
+  right: 20px;
+}
+
+
+
+.gallery-image{
+  width: 600px;
+  height: 100%;
+  margin: 0 5px;
+  border-radius: 10px;
+}
+
+
+
+
 .container1 {
   /* background-image: url(../img/kaxeti-blur.jpg); */
   background-repeat: no-repeat;
@@ -298,8 +375,8 @@ z-index: 200;
   }
 
   .far {
-      font-size: 70px;
       margin-bottom: 30px;
+
   }
 
   .html {
@@ -345,6 +422,8 @@ z-index: 200;
   padding: 15px; 
   margin-left: 16px;
   margin-bottom: 20px;
+  border: none;
+  border-radius: 5px;
 }
 
 .input {
@@ -355,6 +434,9 @@ z-index: 200;
   margin-bottom: 16px;
   background-color: #F8F8F8;
   padding-left: 15px;
+  border: none;
+  border-radius: 5px;
+
 }
 
 .button {
@@ -383,65 +465,150 @@ z-index: 200;
 }
 
 
-  /* footer */
-  .footer {
-    width: 100%;
-    background-color: black;
-    display: flex;
-  }
-  
-  .footer-main {
-    max-width: 1600px;
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    padding: 30px;
-  }
+ /* footer */
+ 
 
-  .kailogo {
-    display: flex;
-    margin: 0;
-    width: 250px;
-    height: auto;
-  }
+ footer{
+  background-color: #800000;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #deb887;
+}
+.footer-main{
+  width: 1170px;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-image{
+  position: relative;
+  top: -5px;
+}
+.footer-main .footer-flex{
+  display: flex;
+  align-items: center;
+}
+.footer-main p span{
+  color: white;
+}
+.footer-main>p{
+  margin-left: 30px;
+  letter-spacing: 0.3px;
+}
+.end{
+  display: flex;
+  justify-content: space-between;
+  font-weight: 100;
+  font-size: 14px;
+  width: 434px;
+}
+.end p{
+  line-height: 70px;
+}
+.end p:hover{
+  border-top: 5px solid #deb887;
+}
 
-  .footer-text {
-    color: #F2F2F2;
-    display: flex;
-  }
-  
-  .footer-title {
-    margin-bottom: 20px;
-    color: #F2F2F2;
-  }
-  
-  .footer1 {
-    width: 250px;
-  }
-  
-  .footer2 {
-    width: 100px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .blue {
-    margin-top: 5px;
-    color: #5863F8;
-  }
-  
-  .footer3 {
-    width: 80px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .footer4 {
-    width: 200px;
-    
-  }
 
-  .mail {
-    display: flex;
-  }
+
+
+
+
+
+
+
+
+
+#portfolio {
+  padding: 108px 0px;
+}
+#portfolio h1{
+  font-size: 50px;
+  text-align: center;
+  font-family: 'Cormorant Infant', serif;
+  color: #800000;
+}
+
+#portfolio .portfolio-header {
+  padding-bottom: 85px;
+}
+#portfolio .portfolio-header h2 {
+  text-align: center;
+}
+#portfolio .portfolio-header .whole-icon {
+  padding-top: 5px;
+}
+#portfolio .porfolio-main {
+  max-width: 100%;
+  height: 765px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 7px;
+}
+.porfolio-main :nth-child(1),:nth-child(3), :nth-child(5){
+  grid-column: span 2;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+#portfolio .porfolio-main .portfolio-box {
+  background-color: #000;
+  position: relative;
+}
+#portfolio .porfolio-main .portfolio-box:hover {
+  background-color: #292929;
+}
+#portfolio .porfolio-main .portfolio-box:hover .box-lower, #portfolio .porfolio-main .portfolio-box:hover .box-upper {
+  opacity: 1;
+}
+#portfolio .porfolio-main .portfolio-box .box-upper {
+  margin-top: 160px;
+  display: flex;
+  opacity: 0;
+  justify-content: center;
+  margin-right: 4px;
+  transition: opacity 1.5s;
+}
+#portfolio .porfolio-main .portfolio-box .box-upper .wre {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 46px;
+  height: 46px;
+  background-color: transparent;
+  border: 2px solid green;
+  border-radius: 50%;
+}
+#portfolio .porfolio-main .portfolio-box .box-upper .wre:first-of-type {
+  transform: translateX(-11px);
+}
+#portfolio .porfolio-main .portfolio-box .box-upper .wre:hover {
+  background-color: green;
+}
+#portfolio .porfolio-main .portfolio-box .box-lower {
+  background-color: #000;
+  position: absolute;
+  opacity: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding-top: 15px;
+  transition: opacity 1s;
+}
+#portfolio .porfolio-main .portfolio-box .box-lower h5 {
+  font-size: 16.98px;
+  font-weight: 600;
+  margin-bottom: 8px;
+  color: white;
+}
+#portfolio .porfolio-main .portfolio-box .box-lower p {
+  font-size: 13px;
+  font-weight: 600;
+  font-style: italic;
+  margin-bottom: 17.6px;
+  color: green;
+}
