--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,8 +7,12 @@
 
 @media screen and (max-width: 800px) {
     .header-div{
+        display: flex;
         justify-content: flex-end;
         padding: 20px 20px 20px 0px;
+    }
+    .ul{
+        justify-content: flex-end;
     }
     .nav{
         margin-top: 0px;
