--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,13 @@
     opacity: 0.9;
     z-index: 1000;
 }
+.ul a{
+  cursor: pointer;
+}
+
+.nav-text:hover{
+  border-bottom: 2px solid #deb887;
+}
 
 .nav-list {
     /* background-color: teal; */
