--- a/css/fonts.css
+++ b/css/fonts.css
@@ -4,3 +4,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Birthstone&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Explora&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Zen+Antique+Soft&display=swap');
