--- a/css/style.css
+++ b/css/style.css
@@ -127,33 +127,6 @@ position: relative;
 z-index: 200;
 }
 
-/* 1st part */
-
-/* .gallery {
-	padding: 1rem;
-	display: grid;
-	grid-template-columns: repeat(5, 80vw);
-	grid-template-rows: 1fr;
-	grid-column-gap: 1rem;
-	grid-row-gap: 1rem;
-	overflow-x: scroll;
-	height: 50vh;
-	scroll-snap-type: both mandatory;
-	scroll-padding: 1rem;
-}
-
-.active {
-	scroll-snap-type: unset;
-}
-
-li {
-	scroll-snap-align: center;
-	display: inline-block;
-	border-radius: 3px;
-	font-size: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-} */
 .container1 h1{
   font-size: 50px;
   margin-bottom: 100px;
@@ -503,55 +476,9 @@ li {
   margin-top: 28px;
   font-size: 13px;
 
-}
+} 
 
 
- /* footer */
- 
-
- footer{
-  background-color: #800000;
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #deb887;
-}
-.footer-main{
-  width: 1170px;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.footer-image{
-  position: relative;
-  top: -5px;
-}
-.footer-main .footer-flex{
-  display: flex;
-  align-items: center;
-}
-.footer-main p span{
-  color: white;
-}
-.footer-main>p{
-  margin-left: 30px;
-  letter-spacing: 0.3px;
-}
-.end{
-  display: flex;
-  justify-content: space-between;
-  font-weight: 100;
-  font-size: 14px;
-  width: 434px;
-}
-.end p{
-  line-height: 70px;
-}
-.end p:hover{
-  border-top: 5px solid #deb887;
-}
 
 
 #portfolio {
@@ -586,7 +513,6 @@ li {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  
 }
 
 #portfolio .porfolio-main .portfolio-box {
@@ -647,4 +573,82 @@ li {
   font-style: italic;
   margin-bottom: 17.6px;
   color: green;
+}
+
+
+
+
+/* footer */
+
+
+footer{
+  background-color: #800000;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #deb887;
+}
+.footer-main{
+  max-width: 1170px;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-image{
+  position: relative;
+  top: -5px;
+}
+.footer-main .footer-flex{
+  display: flex;
+  align-items: center;
+}
+.footer-main p span{
+  color: white;
+}
+.footer-main>p{
+  margin-left: 30px;
+  letter-spacing: 0.3px;
+}
+.end{
+  display: flex;
+  justify-content: space-between;
+  font-weight: 100;
+  font-size: 14px;
+  width: 434px;
+}
+.end p{
+  line-height: 70px;
+}
+.end p:hover{
+  margin-top: -5px;
+  border-top: 5px solid #deb887;
+}
+
+
+#giji {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #deb887;
+  margin: 6px 20px 0px 0px;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
 }
