--- a/css/style.css
+++ b/css/style.css
@@ -607,3 +607,28 @@ footer{
   -webkit-transform: rotate(45deg) translate(-8px, -8px);
   transform: rotate(45deg) translate(-8px, -8px);
 }
+
+#section2{
+  display: flex;
+  height: 500px;
+  justify-content: center;
+  margin-bottom: 400px;
+  align-items: center;
+}
+.section2-back{
+height: 100%;
+width: 60%;
+display: flex;
+}
+.section2-front{
+  height: 100%;
+  width: 40%;
+  display: flex;
+  justify-content: center;
+}
+.section2-img-front{
+  height: 100%;
+}
+.section2-img-back{
+height: 100%;
+}
